
P4
----------------------
* Command to correct for server time wasn't using the optional values such as the port (CC-469). Reported by Terri Paik
* Fix problem where very short interval time (30 seconds) was causing system to run out of file handles. Fix by Jared Richardson

PropertyLabelIncrementer
----------------------
* Add attribute "defaultlabel" which is returned when property file doesn't exist (CC-470).

PVCS
----------------------
* Add support for multiline comments (CC-440). Patch by Scott Heaberlin

SCPPublisher
----------------------
* Add attribute "executableName" to specify alternative executable.

StreamPumper
----------------------
* Log if consuming line fails (CC-199).  Reported by Kaloyan Enimanev.

SVN
----------------------
* Reset modified property to null if no modifications. Patch by Paul Hammant
* Remove race condition on closing error stream.
* Surround dates with single quotes (CC-447).  Patch by Marco Tedone.

UCM
----------------------
* Skip rmbranch and rmver events (CC-430). Patch by Olga Bondarchuk

VSS
----------------------
* Asterisks in comments no longer cause StringIndexOutOfBoundsException (CC-461).  Reported by Omair-Inam Abdul-Matin

reporting application
======================

buildresults.xsl
----------------------
* Comment out javadoc.xsl since the information is already in the errors and warnings section.

index.jsp
----------------------
* Fix invalid comment syntax in index.jsp (CC-486). Reported by Andy Stevens
* Use fully qualified hostname for JMX server (CC-362). Patch by Sven Strohschein
* Use cruisecontrol.jmxhost parameter if it is set in web.xml.

controlpanel.jsp
----------------------
* Use fully qualified hostname for JMX server (CC-362). Patch by Rajesh Patel
* Use cruisecontrol.jmxhost parameter if it is set in web.xml. Patch by Jared Richardson

FileServlet
----------------------
* Fix problem where urls in directory might have double slashes. Fix by Edward Kuns

nant.xsl
----------------------